// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedButton renders and clicks basic button 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "elevation": 3,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 5,
          "width": 5,
        },
        "shadowOpacity": 0.1,
      },
      Object {
        "backgroundColor": "#c3f229",
        "borderRadius": 25,
        "margin": 10,
        "paddingVertical": 15,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "color": "#1C1C1E",
          "marginRight": 0,
        },
      ]
    }
  >
    TEST BUTTON
  </Text>
</View>
`;

exports[`ThemedButton renders and clicks button with no border radius 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "elevation": 3,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 5,
          "width": 5,
        },
        "shadowOpacity": 0.1,
      },
      Object {
        "backgroundColor": "rgb(0, 122, 255)",
        "borderRadius": 5,
        "margin": 10,
        "paddingVertical": 15,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "color": "rgb(28, 28, 30)",
          "marginRight": 0,
        },
      ]
    }
  >
    TEST BUTTON
  </Text>
</View>
`;

exports[`ThemedButton renders and clicks small button with icon, text color, no margin, and no shadow 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#c3f229",
        "borderRadius": 20,
        "margin": 0,
        "paddingVertical": 10,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "fontWeight": "bold",
        },
        Object {
          "color": "#F4F4F4",
          "marginRight": 10,
        },
      ]
    }
  >
    TEST BUTTON
  </Text>
  <RNSVGSvgView
    accessibilityRole="image"
    align="xMidYMid"
    bbHeight={15}
    bbWidth={15}
    fill="#1C1C1E"
    focusable={false}
    height={15}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 15,
          "width": 15,
        },
      ]
    }
    vbHeight={512}
    vbWidth={512}
    width={15}
  >
    <RNSVGGroup
      fill={4280032286}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z"
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
